Fixed z-index on scss files

--- a/packages/shared/styles/components/SfBottomNavigation.scss
+++ b/packages/shared/styles/components/SfBottomNavigation.scss
@@ -5,7 +5,7 @@
   position: fixed;
   bottom: 0;
   left: 0;
-  z-index: 2;
+  z-index: 1;
   display: flex;
   justify-content: space-around;
   align-items: center;
