--- a/packages/shared/styles/components/SfGallery.scss
+++ b/packages/shared/styles/components/SfGallery.scss
@@ -12,7 +12,6 @@ $gallery__stage-width: 400px !default;
 
 .sf-gallery {
   position: relative;
-  z-index: 0;
   width: 100%;
   text-align: center;
   display: flex;
@@ -22,7 +21,7 @@ $gallery__stage-width: 400px !default;
     padding: 0;
     margin: $gallery__nav-margin;
     @media (max-width: $mobile-max) {
-      z-index: 2;
+      z-index: 1;
       position: absolute;
       width: auto;
       margin: 0;
