--- a/packages/shared/styles/components/SfProductCard.scss
+++ b/packages/shared/styles/components/SfProductCard.scss
@@ -24,7 +24,6 @@ $product__image-blend-mode: darken !default;
     align-items: center;
     justify-content: center;
     display: flex;
-    z-index: 2;
     img {
       mix-blend-mode: $product__image-blend-mode;
       max-width: 100%;
@@ -71,7 +70,6 @@ $product__image-blend-mode: darken !default;
   &:hover {
     box-shadow: $product-card-hover-box-shadow;
     transition: 0.3s all;
-    z-index: 2;
     .sf-product-card__wishlist-icon {
       visibility: visible;
       outline: none;
